s3tftpd (0.3.0) UNRELEASED; urgency=medium

  * Log transfer completion
  * Update dependencies

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Fri, 08 May 2020 09:08:30 +0000

s3tftpd (0.2.2) unstable; urgency=medium

  * Makefile: Respect INSTALL variable
  * Update dependencies
  * systemd: s3tftpd.service after network.target

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Thu, 13 Feb 2020 08:20:05 +0000

s3tftpd (0.2.1) unstable; urgency=medium

  * debian: Include vendored dependencies in source package

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Thu, 07 Nov 2019 04:40:30 +0000

s3tftpd (0.2) unstable; urgency=medium

  * Build depends golang-any >= 1.11.

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Thu, 24 Oct 2019 04:48:22 +0000

s3tftpd (0.1) unstable; urgency=medium

  * Initial Release.

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Thu, 25 Oct 2018 20:39:12 +0000