@@ -1,11 +1,12 @@
 #!/usr/bin/make -f
-# export DH_OPTIONS = -v
+export DH_OPTIONS
 
 export GOFLAGS=-mod=vendor
 export GOCACHE=/tmp/go-build
+export GO111MODULE=on
 
 %:
-	dh $@
+	dh $@ --with=golang
 
 override_dh_auto_install:
 	dh_auto_install --destdir=debian/tmp
