@@ -2,6 +2,7 @@ s3tftpd (0.3.0) UNRELEASED; urgency=medium
 
   * Log transfer completion
   * Update dependencies
+  * Package using dh-golang to populate Built-Using field
 
  -- Kasumi Hanazuki <kasumi@rollingapple.net>  Fri, 08 May 2020 09:08:30 +0000
 
